--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ body {
   line-height: 1.6em;
 }
 
+.logo {
+  height: 500px;
+  width: 200px;
+  /* background-image: url('../shrinkit.svg'); */
+}
+
 /* ================ The Timeline ================ */
 
 .timeline {
